[package]
name = "meka-module-manifest"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/meka-module-manifest"
readme = "README.md"
description = "Compiled Lua-only text version of ~ioiojo/mlua-module-manifest"

[features]
default = ["fennel153"]
fennel100 = ["fennel-mount/fennel100", "fennel-searcher/fennel100"]
fennel153 = ["fennel-mount/fennel153", "fennel-searcher/fennel153"]
mlua-lua54 = ["fennel-compile/mlua-lua54", "fennel-mount/mlua-lua54", "fennel-searcher/mlua-lua54", "mlua/lua54", "mlua-module-manifest/mlua-lua54"]
mlua-lua53 = ["fennel-compile/mlua-lua53", "fennel-mount/mlua-lua53", "fennel-searcher/mlua-lua53", "mlua/lua53", "mlua-module-manifest/mlua-lua53"]
mlua-lua52 = ["fennel-compile/mlua-lua52", "fennel-mount/mlua-lua52", "fennel-searcher/mlua-lua52", "mlua/lua52", "mlua-module-manifest/mlua-lua52"]
mlua-lua51 = ["fennel-compile/mlua-lua51", "fennel-mount/mlua-lua51", "fennel-searcher/mlua-lua51", "mlua/lua51", "mlua-module-manifest/mlua-lua51"]
mlua-luajit = ["fennel-compile/mlua-luajit", "fennel-mount/mlua-luajit", "fennel-searcher/mlua-luajit", "mlua/luajit", "mlua-module-manifest/mlua-luajit"]
mlua-luajit52 = ["fennel-compile/mlua-luajit52", "fennel-mount/mlua-luajit52", "fennel-searcher/mlua-luajit52", "mlua/luajit52", "mlua-module-manifest/mlua-luajit52"]
mlua-luau = ["fennel-compile/mlua-luau", "fennel-mount/mlua-luau", "fennel-searcher/mlua-luau", "mlua/luau", "mlua-module-manifest/mlua-luau"]
mlua-luau-jit = ["fennel-compile/mlua-luau-jit", "fennel-mount/mlua-luau-jit", "fennel-searcher/mlua-luau-jit", "mlua/luau-jit", "mlua-module-manifest/mlua-luau-jit"]
mlua-luau-vector4 = ["fennel-compile/mlua-luau-vector4", "fennel-mount/mlua-luau-vector4", "fennel-searcher/mlua-luau-vector4", "mlua/luau-vector4", "mlua-module-manifest/mlua-luau-vector4"]
mlua-vendored = ["fennel-compile/mlua-vendored", "fennel-mount/mlua-vendored", "fennel-searcher/mlua-vendored", "mlua/vendored", "mlua-module-manifest/mlua-vendored"]

[dependencies]
fennel-compile = { path = "../fennel-compile", default-features = false }
fennel-mount = { path = "../fennel-mount", default-features = false }
fennel-searcher = { path = "../fennel-searcher", default-features = false }
mlua = { workspace = true }
mlua-module-manifest = { path = "../mlua-module-manifest", default-features = false }
optional-collections = { workspace = true }

[dev-dependencies]
meka-module-manifest = { path = ".", default-features = false, features = ["fennel153", "mlua-lua54", "mlua-vendored"] }
mlua-module-manifest = { path = "../mlua-module-manifest", default-features = false, features = ["mlua-lua54", "mlua-vendored"] }
