[package]
name = "meka-searcher-macros-test-empty"
version = "0.1.0"
edition = { workspace = true }
publish = false

[features]
default = ["fennel153-lua54-vendored"]
fennel153-lua54-vendored = ["fennel-src/fennel153",
                            "fennel-src/mlua-lua54",
                            "fennel-src/mlua-vendored",
                            "meka/fennel153",
                            "meka/mlua-lua54",
                            "meka/mlua-vendored",
                            "meka-searcher-macros/fennel153",
                            "meka-searcher-macros/mlua-lua54",
                            "meka-searcher-macros/mlua-vendored",
                            "mlua/lua54",
                            "mlua/vendored"]

[dependencies]
fennel-src = { path = "../fennel-src", default-features = false }
meka = { path = "../", default-features = false }
meka-searcher-macros = { path = "../meka-searcher-macros", default-features = false }
mlua = { workspace = true }
