[package]
name = "meka-searcher-macros-test-map-only"
version = "0.1.0"
edition = { workspace = true }
publish = false

[features]
default = ["fennel160-lua54-vendored"]
fennel160-lua54-vendored = ["fennel-src/fennel160",
                            "fennel-src/mlua-lua54",
                            "fennel-src/mlua-vendored",
                            "meka/fennel160",
                            "meka/mlua-lua54",
                            "meka/mlua-vendored",
                            "meka-searcher-macros/fennel160",
                            "meka-searcher-macros/mlua-lua54",
                            "meka-searcher-macros/mlua-vendored",
                            "mlua/lua54",
                            "mlua/vendored"]

[dependencies]
fennel-src = { path = "../fennel-src", default-features = false }
meka = { path = "../", default-features = false }
meka-searcher-macros = { path = "../meka-searcher-macros", default-features = false }
mlua = { workspace = true }
