[package]
name = "meka-searcher-macros"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/meka-searcher-macros"
readme = "README.md"
description = "Proc macros for Meka searcher instantiation"

[lib]
proc-macro = true

[features]
default = ["fennel153"]
fennel100 = ["meka/fennel100"]
fennel153 = ["meka/fennel153"]
mlua-lua54 = ["meka/mlua-lua54", "mlua/lua54"]
mlua-lua53 = ["meka/mlua-lua53", "mlua/lua53"]
mlua-lua52 = ["meka/mlua-lua52", "mlua/lua52"]
mlua-lua51 = ["meka/mlua-lua51", "mlua/lua51"]
mlua-luajit = ["meka/mlua-luajit", "mlua/luajit"]
mlua-luajit52 = ["meka/mlua-luajit52", "mlua/luajit52"]
mlua-luau = ["meka/mlua-luau", "mlua/luau"]
mlua-luau-jit = ["meka/mlua-luau-jit", "mlua/luau-jit"]
mlua-luau-vector4 = ["meka/mlua-luau-vector4", "mlua/luau-vector4"]
mlua-vendored = ["meka/mlua-vendored", "mlua/vendored"]

[dependencies]
meka = { path = "../", default-features = false }
meka-utils = { path = "../meka-utils" }
mlua = { workspace = true, default-features = false }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
