[package]
name = "meka-searcher-macros"
version = "0.1.0"
edition = { workspace = true }
homepage = "https://git.sr.ht/~ioiojo/meka/tree/master/item/meka-searcher-macros"
readme = "README.md"
description = "Proc macros for Meka searcher instantiation"

[lib]
proc-macro = true

[features]
default = ["fennel153"]
fennel100 = ["meka-core/fennel100"]
fennel153 = ["meka-core/fennel153"]
mlua-lua54 = ["meka-core/mlua-lua54"]
mlua-lua53 = ["meka-core/mlua-lua53"]
mlua-lua52 = ["meka-core/mlua-lua52"]
mlua-lua51 = ["meka-core/mlua-lua51"]
mlua-luajit = ["meka-core/mlua-luajit"]
mlua-luajit52 = ["meka-core/mlua-luajit52"]
mlua-luau = ["meka-core/mlua-luau"]
mlua-luau-jit = ["meka-core/mlua-luau-jit"]
mlua-luau-vector4 = ["meka-core/mlua-luau-vector4"]
mlua-module = ["meka-core/mlua-module"]
mlua-vendored = ["meka-core/mlua-vendored"]

[dependencies]
meka-core = { path = "../meka-core", default-features = false }
meka-utils = { path = "../meka-utils" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
